Fix: code block overflow-x

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -418,7 +418,7 @@ pre {
     counter-increment: line 0;
     display: grid;
     padding: 0.5rem 0;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     & [data-highlighted-chars] {
       background-color: var(--highlight);
